updated .gitignore file on Debug folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 __pycache__
 find_ball.py
 process.py
+
+~/Documents/UTIT 2021-2022/Competitive Robotics/Repos basketball_New/Team_Shaq/picr21-team-shaq/Electronics/Firmware/Debug$ 
